<resources>
    <string name="app_name">RoomDbApp</string>
    <string name="authority">com.penguinstech.cloudy.provider</string>
    <string name="account_type">penguinstech.com</string>


    <string name="click_me">Click Me</string>
    <string name="get_data">get data</string>
    <string name="add_task">add task</string>
    <string name="add_new_note">Add new Note</string>
    <string name="title">title</string>
    <string name="add_note">Add Note</string>
    <string name="description">description</string>
    <string name="firestore">Firestore</string>
    <string name="room_db">Room DB</string>
    <string name="subscribe">Subscribe</string>
    <string name="_0_total_space">Total Size: 0mb</string>
    <string name="_0mb_space">0mb Space</string>
    <string name="_5mb_space">5mb Space</string>
    <string name="_10mb_space">10mb Space</string>
    <string name="_15mb_space">15mb Space</string>
    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="current_plan">Plan: free</string>
    <string name="bronze_plan">Your are now on bronze subscription plan</string>
    <string name="silver_plan">Your are now on silver subscription plan</string>
    <string name="gold_plan">Your are now on gold subscription plan</string>
    <string name="free">Free</string>
    <string name="enter_user_naame_to_log_in">Enter user name to Log in</string>
    <string name="user_name">User name</string>
    <string name="log_in">Log in</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_file">Add File</string>
    <string name="new_file">new files</string>
    <string name="upload_files">Upload Files</string>
    <string name="image">saved images</string>
    <string name="sync">Sync</string>
    <string name="_1000">$1000</string>
    <string name="manage_subscriptions">Manage Subscriptions</string>
    <string name="used_space_0mb">Used space: 0mb</string>
    <string name="pricing">Pricing</string>
</resources>