<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_note"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/toolTip"
        android:layout_alignParentStart="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/toolTip"
        android:id="@+id/titleContainer"
        >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:id="@+id/label"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="Title"
            android:id="@+id/title_ET"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/titleContainer"
        android:id="@+id/descriptionContainer"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:id="@+id/label1"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="Title"
            android:id="@+id/description_ET"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_db"
        android:layout_below="@id/descriptionContainer"
        android:layout_marginTop="50dp"
        android:layout_toStartOf="@id/addNoteBtn"
        android:layout_marginEnd="5dp"
        android:id="@+id/addToLocalNoteBtn"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/descriptionContainer"
        android:layout_marginTop="50dp"
        android:id="@+id/addNoteBtn"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firestore"
        android:layout_below="@id/descriptionContainer"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/addNoteBtn"
        android:layout_marginStart="5dp"
        android:id="@+id/addToFirestoreNoteBtn"
        />




</RelativeLayout>