<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SubscribeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
            android:id="@+id/circular_progress"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            app:drawDot="true"
            app:dotColor="@color/purple_500"
            app:dotWidth="16dp"
            app:progressColor="@color/purple_500"
            app:progressBackgroundColor="@color/purple_200"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/current_plan"
                android:textColor="@color/black"
                android:id="@+id/current_planTV"
                android:gravity="center"
                android:padding="7dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:textSize="17sp"/>


            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/used_space_0mb"
                android:textColor="@color/black"
                android:id="@+id/current_spaceTV"
                android:gravity="center"
                android:padding="7dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/_0_total_space"
                android:textColor="@color/black"
                android:id="@+id/totalSizeTV"
                android:gravity="center"
                android:padding="7dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:textSize="17sp"/>

        </LinearLayout>



    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/pricing"
        android:padding="5dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/subscriptionRV"
        />

</LinearLayout>